[package]
name = "hue-notify"
version = "0.1.0"
authors = ["nsd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.7.1"
futures = "0.3"
huelib = "0.6.1"
log = "0.4.11"
ureq = { version = "1.1.1", features = ["json"] }
