[package]
name = "hue-notify"
version = "0.2.1"
authors = ["Nicolas Senaud"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
env_logger = "0.9"
futures = "0.3"
huelib = "0.9"
log = "0.4"
ureq = { version = "1", features = ["json"] }
